# BeamMP-ChatHook

./: .gitignore  README.md
ChatHook Container/: .env.example  Dockerfile  compose.yaml  entrypoint.sh
ChatHook Container/chathook/: Cargo.toml
ChatHook Container/chathook/src/: ipapi.rs  main.rs
Server/ChatHook/: main.lua
Server/ChatHook/libs/: Build.lua  Log.lua  PlayerCount.lua  ServerConfig.lua  UDPClient.lua
img/: dedi_setup.drawio
